Button erstellt um SharkScale sauber zu beendet